--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,16 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/images/CardBack.jpg
+    - assets/images/cardBack.jpg
+    - assets/images/cards/2_of_clubs.png
+    - assets/images/cards/3_of_diamonds.png
+    - assets/images/cards/4_of_hearts.png
+    - assets/images/cards/5_of_spades.png
+    - assets/images/cards/6_of_clubs.png
+    - assets/images/cards/7_of_diamonds.png
+    - assets/images/cards/8_of_hearts.png
+    - assets/images/cards/9_of_spades.png
+    - assets/images/cards/10_of_clubs.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
